# vc-pqc

./: .gitignore  Cargo.toml  README.md  SYSTEM_SUMMARY.md  codebase_analysis.md  demo.db  demo_graph.json  research_agent.db
benches/: benchmarks.rs
docs/: bdec_plan.md  bdec_requirements.md  loquat_gap_analysis.md  loquat_implementation_plan.md  loquat_requirements.md  zkvm_usage.md
docs/research/: 2024-868.txt  ProSec2024.txt
examples/: demo.rs
src/: benchmark.rs  database.rs  embeddings.rs  iop_key_id.rs  keygen.rs  knowledge_graph.rs  lib.rs  main.rs  nlp.rs  paper_analyzer.rs  scraper.rs  setup.rs  sign.rs  verify.rs
src/bdec/: mod.rs
src/loquat/: ark_serde.rs  benchmark.rs  encoding.rs  errors.rs  fft.rs  field_p127.rs  field_utils.rs  guest.rs  iop_key_id.rs  keygen.rs  ldt.rs  merkle.rs  mod.rs  setup.rs  sign.rs  sumcheck.rs  tests.rs  transcript.rs  verify.rs
src/snarks/: aurora.rs  fractal.rs  loquat_r1cs.rs  mod.rs  r1cs.rs
zkvm/host/: Cargo.toml
zkvm/host/src/: main.rs
zkvm/methods/guest/: Cargo.toml
zkvm/methods/guest/src/: main.rs
