[package]
name = "vc-pqc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vc-pqc"
path = "src/main.rs"

[dependencies]
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
# SNARK ecosystem dependencies
ark-ff = "0.5"
ark-poly = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
ark-ec = "0.5"
ark-relations = "0.5"
ark-bn254 = "0.5"
# For Fiat-Shamir and transcript management
merlin = "3.0"
# Error handling
thiserror = "1.0"
# For future C++ libiop integration
libc = "0.2"
# Additional cryptography
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_with = "3.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false