[package]
name = "vc-pqc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vc-pqc"
path = "src/main.rs"

[dependencies]
# ark-* dependencies are no longer needed for the core loquat library
# ark-ff = "0.4.2"
# ark-poly = "0.4.2"
# ark-bn254 = "0.4.2"
# ark-serialize = "0.4.2"
sha2 = "0.10.8"
merlin = "3.0.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] } 
bincode = "1.3.3"
thiserror = "1.0.58"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false