[package]
name = "vc-pqc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vc-pqc"
path = "src/main.rs"

[dependencies]
# Core dependencies
sha2 = { version = "0.10.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# std-only dependencies (enabled via the `std` feature)
rand = { version = "0.8.5", optional = true }
rand_chacha = { version = "0.3.1", optional = true }
tracing = { version = "0.1", optional = true }
bincode = { version = "1.3.3", optional = true }
risc0-zkvm = { version = "^3.0.3", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5"
methods = { path = "zkvm/methods" }
risc0-zkvm = { version = "^3.0.3" }

[features]
default = ["std"]
std = [
    "rand",
    "rand_chacha",
    "tracing",
    "bincode",
    "risc0-zkvm/std",
    "sha2/std",
    "serde/std",
]
guest = []

[[bench]]
name = "benchmarks"
harness = false
